Add SiteMinder authentication Add a method to clear cookies Rework the way used to pass the arguments in order to make it flexible and to be able to POST request with application/json content type.

--- a/plugin.xml
+++ b/plugin.xml
@@ -53,6 +53,7 @@
 
         <config-file target="AndroidManifest.xml" parent="/manifest">
             <uses-permission android:name="android.permission.INTERNET" />
+			<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
         </config-file>
 
         <source-file src="src/android/src/com/synconset/CordovaHTTP/CordovaHttp.java" target-dir="src/com/synconset" />
